GH-223 Refactor hat command and resolve BukkitUserProvider (#223)
* Update dependency me.clip:placeholderapi to v2.11.2 (#217)

* Resolve BukkitUserProvider

* Fixed /hat command

* Cleanup

* Remove deprecated durationToString method

* Add AbstractViewerArgument.